--- a/src/main/resources/templates/control.html
+++ b/src/main/resources/templates/control.html
@@ -27,9 +27,22 @@
         h6 {
             font-style: italic;
         }
-        .form-check.input-group.radio:hover {
+        .form-check.input-group.radio:hover,.nav-link:hover {
             background-color: lightgray;
             cursor: pointer;
+        }
+        .nav-pills .nav-link, .roundGrayBorder {
+            border-radius: .6rem;
+            border: 1px solid lightgray;
+        }
+        .nav-pills .nav-link.active {
+            border: 1px solid #007bff;
+        }
+        .paddingLeft50,.tab-content>div {
+            padding-left: 50px;
+        }
+        table th {
+            background-color: khaki;
         }
     </style>
 </head>
@@ -41,14 +54,14 @@
 <div th:if="${success}" th:text="${success}" class="alert alert-success" role="alert"
      onClick="$(this).hide('slow', function(){ $(this).remove(); })">success
 </div>
-
+<p id="response" style="text-align: center"></p>
 <div class="container-fluid">
     <div class="row">
         <div class="col" id="alert">
         </div>
 
-        <div class="col-8">
-        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+        <div class="col-8"  >
+        <ul class="nav nav-pills" id="pills-tab" role="tablist">
              <li class="nav-item">
                 <a class="nav-link active" id="pills-competitie-tab" data-toggle="pill" href="#pills-competitie" role="tab" aria-controls="pills-competitie" aria-selected="true">Competitie</a>
             </li>
@@ -62,19 +75,19 @@
                 <a class="nav-link" id="pills-configuratie-tab" data-toggle="pill" href="#pills-configuratie" role="tab" aria-controls="pills-configuratie" aria-selected="false">Configuratie</a>
             </li>
 
-        </ul><br/>
-        <div class="tab-content" id="pills-tabContent">
+        </ul>
+        <div class="tab-content roundGrayBorder" id="pills-tabContent" >
 
             <div class="tab-pane fade show active" id="pills-competitie" role="tabpanel" aria-labelledby="pills-competitie-tab">
                 <h6>het starten, stoppen en herstarten van competitie opdrachten.</h6><br/>
 
                 <div class="row">
 
-                    <div class="form-group col-6" th:title="${currentAssignment}">
+                    <div class="form-group col-6" >
                         <th:block th:each="assignment : ${assignments}">
                             <div class="form-check input-group radio">
                                 <label class="form-check-label">
-                                    <input class="form-check-input" type="radio" name="assignment" th:checked="${assignment.name==currentAssignment}" th:title="${assignment.name==currentAssignment}"
+                                    <input class="form-check-input" type="radio" name="assignment" th:checked="${assignment.name==currentAssignment}"
                                            th:text="' ' + ${assignment.displayName}" th:value="${assignment.name}"
                                            th:id="${assignment.name}" th:attr="time=${assignment.duration.toSeconds()}"/>
                                 </label>
@@ -86,15 +99,13 @@
                         <div class="row">
                             <div class="btn-group-vertical col-4">
                                 <div class="p-2 text-center">
-                                    <button id="start" class="btn btn-success" onclick="startTask();">Start Assignment
-                                    </button>
+                                    <button id="start" class="btn btn-success" onclick="startTask();">Start Assignment</button>
                                 </div>
                                 <div class="p-2 text-center">
-                                    <button id="stop" class="btn btn-danger" onclick="stopTask();">Stop Assignment</button>
+                                    <button id="stop" class="btn btn-danger" onclick="stopTask();" data-container="body" data-toggle="popover" data-placement="left" data-content="Werkt nog niet goed (maakt opgedrachtstatus stuk), dus open voor discussie.">Stop Assignment</button>
                                 </div>
                                 <div class="p-2 text-center">
-                                    <button id="clear" class="btn btn-warning" onclick="clearAssignment();">Clear Assignment
-                                    </button>
+                                    <button id="clear" class="btn btn-warning" onclick="clearAssignments();" data-container="body" data-toggle="popover" data-placement="right" data-content="Dit was nog niet geimplenteerd, dus open voor discussie.">Reset competition</button>
                                 </div>
                             </div>
 
@@ -109,7 +120,7 @@
                 <div class="p-2 col-6">
                     <form class="form" method="post" th:action="@{/control/select-session}" th:object="${selectSessionForm}">
                         <div class="form-group">
-                            <label for="sessions">Available Sessions</label>
+                            <label for="sessions">Beschikbare sessies</label>
                             <select class="form-control" id="sessions" th:field="*{session}">
                                 <option th:each="s : ${sessions}" th:value="${s.uuid}" th:text="${s.id + '-' + s.uuid}">
                                 </option>
@@ -123,20 +134,10 @@
                 </div>
         </div>
             <div class="tab-pane fade" id="pills-gebruikersbeheer" role="tabpanel" aria-labelledby="pills-gebruikersbeheer-tab">
-                <h6>beheren van gebruikers (alleen wachtwoord wijzigen is geimplementeerd momenteel)</h6><br/>
+                <h6>beheren van gebruikers</h6><br/>
 
                 <div class="p-2 col-6">
-                    <form class="mt-5" method="POST" action="/upload" enctype="multipart/form-data">
-                        <div>
-                            <label class="btn btn-outline-secondary" for="file">
-                                <input id="file" type="file" name="file" hidden/>
-                                bladeren...
-                            </label>
-                        </div>
-                        <input class="btn btn-primary form-control col-3" type="submit" value="upload"/>
-                    </form>
-                    <a class="btn btn-link" href="/getresults">get results</a>
-                    <a class="btn btn-link" href="/getteams">get teams</a>
+                    <div th:remove="tag" th:utext="${teamDetailCanvas}"></div>
                 </div>
 
                 <div class="p-2 col-6">
@@ -168,16 +169,67 @@
 
                 <div class="p-2 col-6">
                     <button id="clone" class="btn btn-primary" onclick="scanAssignments();">Scan Assignments</button>
-                    <p id="response"></p>
+                </div>
+
+                <div class="p-2 col-6">
+
+
+                    <form class="mt-5" method="POST" action="/upload" enctype="multipart/form-data">
+                        <div>
+                            <label class="btn btn-outline-secondary" for="file">
+                                <input id="file" type="file" name="file" hidden/>
+                                bladeren...
+                            </label>
+                        </div>
+                        <input class="btn btn-primary form-control col-3" type="submit" value="upload"/>
+                    </form>
+                    <a class="btn btn-link" href="/getresults">get results</a>
+                    <a class="btn btn-link" href="/getteams">get teams</a>
+
                 </div>
             </div>
         </div>
         </div>
     </div>
+    <div class="row" ><br/><br/><br/>
+    </div>
+    <div class="row" >
+        <div class="col-4"  ></div>
+        <div class="col-8"  >
 
+            <ul class="nav nav-pills" id="pills-tab2" role="tablist">
+                <li class="nav-item">
+                    <a class="nav-link active" id="pills-wedstrijdverloop-tab" data-toggle="pill" href="#pills-wedstrijdverloop" role="tab" aria-controls="pills-wedstrijdverloop" aria-selected="true">Wedstrijdverloop</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="pills-opdrachtdetails-tab" data-toggle="pill" href="#pills-opdrachtdetails" role="tab" aria-controls="pills-opdrachtdetails" aria-selected="false">Opdrachtdetails</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="pills-toptien-tab" data-toggle="pill" href="#pills-toptien" role="tab" aria-controls="pills-toptien" aria-selected="false">Top 10</a>
+                </li>
+            </ul>
+            <div class="tab-content roundGrayBorder" id="pills-tabContent2">
+                <div class="tab-pane fade show active" id="pills-wedstrijdverloop" role="tabpanel" aria-labelledby="pills-wedstrijdverloop-tab">
+                    <h6>De uitslag van elke opdracht</h6>
 
+                    <div th:remove="tag" th:utext="${gameDetailCanvas}"></div>
+                </div>
+                <div class="tab-pane fade" id="pills-opdrachtdetails" role="tabpanel" aria-labelledby="pills-opdrachtdetails-tab">
+                    <h6>Bekijk hier alle opdrachten tot in elk detail</h6>
+
+                    <div th:remove="tag" th:utext="${assignmentDetailCanvas}"></div>
+                </div>
+                <div class="tab-pane fade" id="pills-toptien" role="tabpanel" aria-labelledby="pills-toptien-tab">
+                    <h6>Bekijk hier de beste teams tot dusver</h6>
+
+                    <div th:remove="tag" th:utext="${teamDetailCanvas}"></div>
+                </div>
+            </div>
+
+        </div>
+    </div>
 </div>
-<div style="position: absolute; left:120px; top:60px;">
+<div style="position: absolute; left:120px; top:100px;">
     <div class="text-center"  th:if="${currentAssignment!='-'}" >
         <h4>'[[${currentAssignment}]]'</h4>
         <b>Beschikbare tijd:</b>
@@ -200,12 +252,18 @@
     </div>
     <div>
 
-        <div class="p-2 col-6">
-            <a class="btn btn-primary" href="/rankings" target="rankings">Bekijk ranglijst competitie</a><br/><br/>
-            <a class="btn btn-primary" href="/feedback" target="feedback">Bekijk tussenstand opdracht</a><br/><br/>
-            <a class="btn btn-primary" href="/register" target="register">Registreer team</a><br/><br/>
+        <div class="p-2 col-12 roundGrayBorder" >
+            <h6>Schermkeuzen: </h6>
+            <br/>
+            <a class="btn btn-primary w-100" href="/rankings" target="rankings">Ranglijst competitie</a><br/><br/>
+            <a class="btn btn-primary w-100" href="/feedback" target="feedback">Tussenstand opdracht</a><br/><br/>
+            <a class="btn btn-primary w-100" href="/register" target="register">Registratie team</a><br/><br/>
         </div>
-
+        <div class="p-2 col-12 roundGrayBorder" >
+            <h6>Development: </h6>
+            <br/>
+            <a class="btn btn-success w-100" href="/getGameMasterState" target="getGameMasterState">Bekijk systeemstatus</a><br/><br/>
+        </div>
     </div>
 </div>
 
